--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1,6 +1,12 @@
 <!doctype html>
 <html lang="he" dir="rtl">
   <head>
+  <link rel="manifest" href="/manifest.json" />
+  <meta name="theme-color" content="#0ea5e9" />
+  <link rel="icon" href="/vite.svg" />
+  <link rel="manifest" href="/manifest.json" />
+  <meta name="theme-color" content="#0ea5e9" />
+  <link rel="icon" href="/vite.svg" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Yossi Record Dashboard</title>
